--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   des systèmes intelligents, performants et éco-responsables.
 </p>
 
-<a href="docs/CV_Alt_Fallou.pdf" target="_blank">Voir mon CV</a>
+<a href="docs/CV_Alte_Fallou.pdf.pdf" target="_blank">Voir mon CV</a>
 
   </section>
   <footer>
